Fix wrong commit message double v --> vv

--- a/.github/workflows/tagged-release.yml
+++ b/.github/workflows/tagged-release.yml
@@ -33,5 +33,5 @@ jobs:
             git config --global user.name 'github-actions[bot]'
             git config --global user.email 'github-actions[bot]@users.noreply.github.com'
             git add version.py
-            git commit -m "Update version to v${{ github.ref_name }}"
+            git commit -m "Update version to ${{ github.ref_name }}"
             git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }} HEAD:main
